--- a/navegacion.html
+++ b/navegacion.html
@@ -6,6 +6,16 @@
     <title>Navegación</title>
   </head>
   <body>
+    <p>
+      Counting objects: 5, done.
+      Delta compression using up to 4 threads.
+      Compressing objects: 100% (5/5), done.
+      Writing objects: 100% (5/5), 657 bytes | 0 bytes/s, done.
+      Total 5 (delta 1), reused 0 (delta 0)
+      remote: Resolving deltas: 100% (1/1), done.
+      To https://github.com/lalitis14/repo-ejercicio.git
+         88a00ed..8210fd9  master -> master
+    </p>  
 
   </body>
 </html>
